--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -16,7 +16,7 @@ ChatScreen As screen:
         )
         ));
         Refresh (LeadChats));
-        Set(VarChatScreentimerPopup,true);
+        UpdateContext({startTimerCS:false}); Reset(Timer2); UpdateContext({startTimerCS: true}) 
 
     Container7 As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(237, 237, 237, 1)
@@ -76,6 +76,7 @@ ChatScreen As screen:
                     =UpdateContext({locInfoExpanded:false});
                     If(VarLeadstatus="Quoted" ||VarLeadstatus="Sold" ,Navigate(QuotedSOldLeads);,VarLeadstatus="Rejected",Navigate(RejectedLeads);,Navigate(SubmittedLeadScreen));
                     Set(VarLeadMessages,false);
+                    UpdateContext({startTimerCS:false});
                 PaddingBottom: =5
                 PaddingTop: =5
                 Width: =Parent.Height/2
@@ -305,12 +306,13 @@ ChatScreen As screen:
                     Height: =28
                     HoverColor: =RGBA(0, 0, 0, 1)
                     HoverFill: =Self.Fill
-                    OnSelect: |-
+                    OnSelect: |
                         =Set(VarUserName,ThisItem.FromName);
                         //(VartoolTip,ThisItem.FromName)
                         UpdateContext({VartoolTip:true});
                         Set(VarUsernameTimer,true);
                         //Set(varChatScreentimerPopup,true);
+                        UpdateContext({startTimerCS:false}); Reset(Timer2); UpdateContext({startTimerCS: true}) 
                     PaddingBottom: =0
                     PaddingLeft: =0
                     PaddingRight: =0
@@ -352,12 +354,13 @@ ChatScreen As screen:
                     Height: =28
                     HoverColor: =RGBA(0, 0, 0, 1)
                     HoverFill: =Self.Fill
-                    OnSelect: |-
+                    OnSelect: |
                         =Set(VarUserName,ThisItem.FromName);
                         //(VartoolTip,ThisItem.FromName)
                         UpdateContext({VartoolTip:false});
                         Set(VarUsernameTimer,false);
                         //Set(varChatScreentimerPopup,true);
+                        UpdateContext({startTimerCS:false}); Reset(Timer2); UpdateContext({startTimerCS: true}) 
                     PaddingBottom: =0
                     PaddingLeft: =0
                     PaddingRight: =0
@@ -419,7 +422,9 @@ ChatScreen As screen:
                     HoverBorderColor: =RGBA(255, 0, 0, 1)
                     HoverFill: =RGBA(0, 0, 0, 0)
                     Mode: =TextMode.MultiLine
-                    OnChange: =//Set(varChatScreentimerPopup,true)
+                    OnChange: |-
+                        =//Set(varChatScreentimerPopup,true)
+                        UpdateContext({startTimerCS:false}); Reset(Timer2); UpdateContext({startTimerCS: true}) 
                     PaddingLeft: =10
                     Size: =If(Parent.Width<500,12,Parent.Width>500,14)
                     Width: =Parent.Width-Icon6_2.Width
@@ -464,7 +469,7 @@ ChatScreen As screen:
                         Refresh(LeadChats);
                         Reset(TextInput1_2));
                          
-                        Set(varChatScreentimerPopup,true);
+                        UpdateContext({startTimerCS:false}); Reset(Timer2); UpdateContext({startTimerCS: true}) 
                             
                     PaddingBottom: =10
                     PaddingLeft: =10
@@ -637,6 +642,7 @@ ChatScreen As screen:
                 OnSelect: |-
                     =Navigate(ChatScreen);
                     Set(VarNotification,false);
+                    UpdateContext({startTimerCS:false}); Reset(Timer2); UpdateContext({startTimerCS: true}) ;
                 Size: =14
                 Text: ="Ok"
                 Width: =Parent.Width/5
@@ -728,8 +734,8 @@ ChatScreen As screen:
                     Font: =Font.Arial
                     HoverFill: =ColorFade(Self.Fill, -20%)
                     OnSelect: |-
-                        =Set(VarchatInactivemode,false);Set(varChatScreentimerPopup,true);
-                        Navigate(ChatScreen);
+                        =Set(VarchatInactivemode,false);UpdateContext({startTimerCS:false}); Reset(Timer2); UpdateContext({startTimerCS: true}) 
+                        //Navigate(ChatScreen);
                     Size: =14
                     Text: ="No"
                     Visible: =If(lblNotificationLSS_2.Text="Submitting",false,true)
@@ -741,7 +747,8 @@ ChatScreen As screen:
                     Fill: =RGBA(255, 0, 0, 1)
                     Font: =Font.Arial
                     HoverFill: =ColorFade(Self.Fill, -20%)
-                    OnSelect: =Set(VarchatInactivemode,false);If(VarLeadstatus="Quoted" ||VarLeadstatus="Sold" ,Navigate(QuotedSOldLeads);,VarLeadstatus="Rejected",Navigate(RejectedLeads);,Navigate(SubmittedLeadScreen));
+                    OnSelect: |-
+                        =Set(VarchatInactivemode,false);If(VarLeadstatus="Quoted" ||VarLeadstatus="Sold" ,Navigate(QuotedSOldLeads);,VarLeadstatus="Rejected",Navigate(RejectedLeads);,Navigate(SubmittedLeadScreen));UpdateContext({startTimerCS:true}); Reset(Timer2); UpdateContext({startTimerCS: false}) 
                     Size: =14
                     Text: ="Yes"
                     Visible: =If(lblNotificationLSS_2.Text="Submitting",false,true)
@@ -749,9 +756,11 @@ ChatScreen As screen:
                     ZIndex: =2
 
     Timer2 As timer:
-        Duration: =2000
-        OnTimerEnd: =Set(VarchatInactivemode,true)
-        Start: =VarChatScreentimerPopup
+        Duration: =120000
+        OnTimerEnd: |-
+            =Set(VarchatInactivemode,true);UpdateContext({startTimerCS:true});
+        Start: =startTimerCS
+        Visible: =false
         X: =100
         Y: =100
         ZIndex: =9
