--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -133,9 +133,7 @@ ChatScreen As screen:
             BorderThickness: =2
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
-            Height: |-
-                =//If(Parent.Height<Parent.Width,Parent.Height/6,Parent.Height/18,Parent.Width>1000,Parent.Height/8)
-                80
+            Height: =If(VarLeadstatus="Quoted" || VarLeadstatus="Sold",120,100)
             LayoutMinHeight: =100
             LayoutMinWidth: =250
             PaddingLeft: =10
@@ -197,6 +195,23 @@ ChatScreen As screen:
                 X: =Parent.Width/3
                 Y: =4
                 ZIndex: =3
+
+            lblHeaderDS_7 As label:
+                AutoHeight: =true
+                DisplayMode: =DisplayMode.View
+                Font: =Font.Arial
+                FontWeight: =FontWeight.Semibold
+                Height: =Parent.Height
+                PaddingLeft: =10
+                PaddingRight: =5.34
+                Size: |
+                    =//21.36
+                    If(Parent.Width<500,12,Parent.Width>500,16)
+                Text: ="Estimate number" & Char(10) & VarEstimateNumber
+                Visible: =If(VarLeadstatus="Quoted" || VarLeadstatus="Sold",true,false)
+                Width: =Parent.Width/2
+                Y: =lblHeaderDS_5.Y+lblHeaderDS_5.Height
+                ZIndex: =4
 
         Container8 As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.Center
