--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -61,7 +61,7 @@
       "improvedmediacapture": false,
       "improvedtabstopbehavior": false,
       "isemptyrequirestableargument": true,
-      "keeprecentscreensloaded": false,
+      "keeprecentscreensloaded": true,
       "longlivingcache": false,
       "mobilenativerendering": false,
       "namedformulas": false,
